--- a/templates/template.html
+++ b/templates/template.html
@@ -15,33 +15,36 @@
 <!--================Header Menu Area =================-->
 <!--================ Start Footer Area =================-->
 <footer class="footer-area section-padding">
-    {% for title, books in books_catalog %}
-    <div class="col">
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    {%for book in books%}
-                        {%if book.image_src%}
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 text-center">
+            {% for title, books in books_catalog %}
+            <div class="col-lg-6">
+                <div class="card mb-4 rounded-3 shadow-sm" style="max-width: 540px;">
+                    <div class="row">
+                        <div class="col-md-4">
+                            {%for book in books%}
+                            {%if book.image_src%}
                             <img src="{{book.image_src }}" class="card-img" alt="{{ book.title }}">
-                        {% else %}
-                            <img src='library/covers/no-pic.png' class="card-img" alt="{{ book.title }}">
-                        {% endif %}
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">{{ book.title }}</h5>
-                                        <p class="card-text">{{ book.author.split()[0] }}</p>
-                                        {% for genre in book.genre %}
-                                        <p class="card-text"><small class="text-muted">{{genre}}</small></p>
-                                        {% endfor %}
-                                    </div>
-                                </div>
+                            {% else %}
+                            <img src='library/covers/nopic.gif' class="card-img" alt="{{ book.title }}">
+                            {% endif %}
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ book.title }}</h5>
+                                <p class="card-text">{{ book.author.split()[0] }}</p>
+                                {% for genre in book.genre %}
+                                <p class="card-text"><small class="text-muted">{{genre}}</small></p>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
-                    {%endfor%}
-    {% endfor %}
-
+                </div>
+            </div>
+            {%endfor%}
+            {% endfor %}
+        </div>
+    </div>
 </footer>
 <!--================ End Footer Area =================-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
