Add links to books txt files

--- a/templates/template.html
+++ b/templates/template.html
@@ -24,7 +24,7 @@
                         <div class="col-md-4">
                             {%for book in books%}
                             {%if book.image_src%}
-                            <img src="{{book.image_src }}" class="card-img" alt="{{ book.title }}">
+                            <img src="{{book.image_src | urlencode}}" class="card-img" alt="{{ book.title }}">
                             {% else %}
                             <img src='library/covers/nopic.gif' class="card-img" alt="{{ book.title }}">
                             {% endif %}
@@ -33,6 +33,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">{{ book.title }}</h5>
                                 <p class="card-text">{{ book.author.split()[0] }}</p>
+                                <a href="{{book.book_src | urlencode}}"target="_blank">Читать</a>
                                 {% for genre in book.genre %}
                                 <p class="card-text"><small class="text-muted">{{genre}}</small></p>
                                 {% endfor %}
