--- a/templates/template.html
+++ b/templates/template.html
@@ -14,55 +14,59 @@
 </header>
 <!--================Header Menu Area =================-->
 <nav aria-label="Page navigator">
-  <ul class="pagination">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item active" aria-current="page">
-      <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
-    </li>
-  </ul>
+       <ul class="pagination justify-content-center mt-4">
+        <li class="page-item {%if not previous_page %} disabled {% endif %}">
+            <a class="page-link" href="{{ previous_page | urlencode }}">Предыдущая</a>
+        </li>
+
+        {% for page in all_pages %}
+        <li class="page-item {% if current_page == page.number %} active {% endif %}">
+            <a class="page-link" href="{{ page.url | urlencode}}">{{ page.number }}</a>
+        </li>
+        {% endfor %}
+        <li class="page-item {% if not next_page %} disabled {% endif %}">
+            <a class="page-link" href="{{ next_page | urlencode }}">Следующая</a>
+        </li>
+    </ul>
+
 </nav>
 <!--================ Start Footer Area =================-->
 <footer class="footer-area section-padding">
     <div class="container">
         <div class="row row-cols-1 row-cols-md-2 text-center">
             {% for title, books in books_catalog %}
-                <div class="col-lg-6">
-                    <div class="card mb-4 rounded-3 shadow-sm" style="max-width: 540px;">
-                        <div class="row">
-                            <div class="col-md-4">
-                                {%for book in books%}
-                                {%if book.image_src%}
-                                <img src="../../{{book.image_src | urlencode}}" class="card-img" alt="{{ book.title }}">
-                                {% else %}
-                                <img src='../covers/nopic.gif' class="card-img" alt="{{ book.title }}">
-                                {% endif %}
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
+            <div class="col-lg-6">
+                <div class="card mb-4 rounded-3 shadow-sm" style="max-width: 540px;">
+                    <div class="row">
+                        <div class="col-md-4">
+                            {%for book in books%}
+                            {%if book.image_src%}
+                            <img src="../../{{book.image_src | urlencode}}" class="card-img" alt="{{ book.title }}">
+                            {% else %}
+                            <img src='../covers/nopic.gif' class="card-img" alt="{{ book.title }}">
+                            {% endif %}
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
 
-                                    <h5 class="card-title">{{ book.title }}</h5>
-                                    <p class="card-text">{{ book.author.split()[0] }}</p>
-                                    {% for genre in book.genre %}
-                                      <div>
-                                        <button type="button" class="btn btn-sm btn-light mb-3" disabled>{{genre}}</button>
-                                      </div>
-                                    {% endfor %}
-
-                                    <p class="card-text mt-md-3"><a href="../{{book.book_src | urlencode}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" target="_blank">Читать</a>
-                                    </p>
+                                <h5 class="card-title">{{ book.title }}</h5>
+                                <p class="card-text">{{ book.author.split()[0] }}</p>
+                                {% for genre in book.genre %}
+                                <div>
+                                    <button type="button" class="btn btn-sm btn-light mb-3" disabled>{{genre}}</button>
                                 </div>
                                 {% endfor %}
+
+                                <p class="card-text mt-md-3"><a href="{{book.book_src | urlencode}}"
+                                                                class="btn btn-primary btn-lg active" role="button"
+                                                                aria-pressed="true" target="_blank">Читать</a>
+                                </p>
                             </div>
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
+                </div>
+            </div>
             {% endfor %}
         </div>
     </div>
