--- a/templates/template.html
+++ b/templates/template.html
@@ -53,7 +53,7 @@
                                 <p class="card-text">{{ book.author.split()[0] }}</p>
                                 {% for genre in book.genre %}
                                 <div>
-                                    <button type="button" class="btn btn-sm btn-light mb-3" disabled>{{genre}}</button>
+                                    <button type="button" class="btn btn-sm btn-secondary mb-3" disabled>{{genre}}</button>
                                 </div>
                                 {% endfor %}
 
