Prepare site to work offline

--- a/templates/template.html
+++ b/templates/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Sci-Fi Library</title>
     <link rel="stylesheet" href='../../static/bootstrap.min.css'>
 </head>
 <body>
@@ -57,7 +57,7 @@
                                 </div>
                                 {% endfor %}
 
-                                <p class="card-text mt-md-3"><a href="{{book.book_src | urlencode}}"
+                                <p class="card-text mt-md-3"><a href="../../{{book.book_src | urlencode}}"
                                                                 class="btn btn-primary btn-lg active" role="button"
                                                                 aria-pressed="true" target="_blank">Читать</a>
                                 </p>
