--- a/templates/template.html
+++ b/templates/template.html
@@ -57,7 +57,7 @@
                                 <p class="card-text">{{ book.author.split()[0] }}</p>
                                 {% for genre in book.genre %}
                                 <div>
-                                    <span class="badge bg-secondary">{{genre}}</span>
+                                    <span class="badge rounded-pill bg-secondary">{{genre}}</span>
                                 </div>
                                 {% endfor %}
 
